--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-lg-4 bg-dark text-white text-center py-4">
                 <div class="header-left">
-                    <img src="C:\Users\Admin\OneDrive\Documents\workspace\dev\Screenshot_20200922_110412.png" alt=""
+                    <img src="./Screenshot_20200922_110412.png" alt=""
                         class="img-thumbnail rounded-circle mb-2">
                     <h1 class="display-5"> Kim Tahehyung</h1>
                     <h4 class="lead text-uppercase text-white-50 mb-4">Full Stack Devloper</h4>
